--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.7.1",
     "react-scripts": "^5.0.1",
     "react-tabs": "^6.0.1",
+    "react-use": "^17.4.0",
     "web-vitals": "^3.1.1"
   },
   "scripts": {
